[tool.poetry]
name = "howfast-apm"
version = "0.7.0"
description = "Lightweight Application Performance Monitoring middleware that measures and reports performance data to HowFast APM."
authors = ["Mickaël Bergem <mickael@howfast.tech>"]
homepage = "https://github.com/HowFast/apm-python"
license = "MIT"
readme = "README.rst"
keywords = ["apm", "performance", "timing", "howfast"]
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers=[
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 4 - Beta',
    'Framework :: Flask',

    # Indicate who your project is intended for
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',

    'License :: OSI Approved :: MIT License',

    'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
requests = "^2.22"
flask = {version = ">=0.8", optional = true}
werkzeug = {version = ">=0.7", optional = true}
blinker = {version = ">=1.1", optional = true}
quart = {version = "^0.12.0", optional = true, extras = ["quart"], python = ">=3.7,<3.9"}

[tool.poetry.dev-dependencies]
pytest = "^5"
pytest-asyncio = "^0.12.0"
pytest-watch = "^4.2"
coverage = "^4.5"
flake8 = "^3.7"
yapf = "^0.28.0"
mypy = "^0.720.0"
coveralls = "^1.8"
ipdb = "^0.12.2"
tox-pyenv = "^1.1.0"

[tool.poetry.extras]
flask = ["flask", "blinker", "werkzeug"]
quart = ["quart"]
# To run the tests, we need to install the tested frameworks
pytest = ["pytest", "pytest-asyncio", "flask", "quart"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
